[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "not1mm" 
version = "25.7.12"
description = "NOT1MM Logger"
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Michael Bridak", email="michael.bridak@gmail.com" },
]
dependencies = [
    "PyQt6",
    "requests",
    "dicttoxml",
    "xmltodict",
    "pyserial",
    "sounddevice",
    "soundfile",
    "numpy",
    "notctyparser >= 23.6.21",
    "rapidfuzz",
    "appdata",
    "Levenshtein",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Communications :: Ham Radio",
]

[project.urls]
"Homepage" = "https://github.com/mbridak/not1mm"
"Bug Tracker" = "https://github.com/mbridak/not1mm/issues"

[tool.setuptools.packages.find]
where = ["."]

exclude = ["not1mm.testing*", "not1mm.not1mm.testing*", "testing*", "test", "usb_vfo_knob*", "research*",]

[tool.setuptools.package-data]
"not1mm.data" = ["*.json", "*.txt", "*.SCP", "*.ui", "*.ttf", "*.desktop", "*.png", "*.qss", "*.sql", "*.html",]
"not1mm.data.phonetics" = ["*.wav",]
"not1mm.icon" = ["*.png",]

[project.scripts]
not1mm = "not1mm.__main__:run"
